[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provsql-studio"
version = "0.1.0"
description = "Web UI for ProvSQL — where-provenance inspection and circuit visualisation."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Pierre Senellart", email = "pierre@senellart.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
]
dependencies = [
    "flask>=3.0",
    "psycopg[binary]>=3.1",
    "psycopg_pool>=3.2",
    "sqlparse>=0.4",
]

[project.optional-dependencies]
test = ["pytest>=7", "pytest-flask>=1.3"]
dev  = ["ruff>=0.5", "mypy>=1.8"]

[project.urls]
Homepage      = "https://provsql.org"
Documentation = "https://provsql.org/docs/"
Source        = "https://github.com/PierreSenellart/provsql"

[project.scripts]
provsql-studio = "provsql_studio.cli:main"

[tool.setuptools.packages.find]
include = ["provsql_studio*"]

[tool.setuptools.package-data]
provsql_studio = [
    "static/*.html",
    "static/*.css",
    "static/*.js",
    "static/img/*",
    "static/fonts/*",
]
